--- a/app/src/main/res/layout/home_work_list_element.xml
+++ b/app/src/main/res/layout/home_work_list_element.xml
@@ -57,7 +57,7 @@
 
                     <ImageView
                         android:scaleType="centerCrop"
-                        android:src="@drawable/login"
+                        android:background="@color/accent"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
                         android:id="@+id/home_work_image_preview" />
