--- a/app/src/main/res/layout/notification_closest_lesson_only.xml
+++ b/app/src/main/res/layout/notification_closest_lesson_only.xml
@@ -3,7 +3,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:padding="10dp"
+    android:layout_height="100dp">
 
     <ImageView
         android:src="@drawable/ic_launcher"
@@ -18,24 +19,29 @@
     <LinearLayout
         android:id="@+id/notification_closest_lesson_cotainer"
         android:orientation="vertical"
+        android:layout_gravity="center_vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <TextView
+
+            android:textColor="@color/primary_text"
             android:id="@+id/notification_lesson_status"
             android:textSize="16sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Следующая пара"/>
+            android:text="@string/next_lesson"/>
 
         <TextView
             android:layout_marginLeft="10dp"
             android:id="@+id/notification_closest_lesson_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/secondary_text"
             android:text="Физика"/>
 
         <TextView
+            android:textColor="@color/secondary_text"
             android:id="@+id/notification_closest_lesson_room"
             android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
