--- a/app/src/main/res/layout/calendar_element.xml
+++ b/app/src/main/res/layout/calendar_element.xml
@@ -43,9 +43,10 @@
         android:layout_height="50dp"
         android:layout_centerInParent="true"
         android:gravity="center_horizontal"
+        android:duplicateParentState="true"
         android:paddingTop="5dp"
         android:text="1"
-        android:textColor="#ffffff"
+        android:textColor="@color/calendar_text_list_selector"
         android:textSize="25sp" />
 
     <TextView
@@ -54,9 +55,10 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/calendar_bottom_indicator"
         android:layout_centerHorizontal="true"
+        android:duplicateParentState="true"
         android:layout_marginBottom="5dp"
         android:text="ПН"
-        android:textColor="@color/white"
+        android:textColor="@color/calendar_secondary_text_list_selector"
         android:textSize="10sp" />
 
     
