--- a/app/src/main/res/layout/timetable_fragment.xml
+++ b/app/src/main/res/layout/timetable_fragment.xml
@@ -12,7 +12,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="@dimen/abc_action_bar_default_height_material">
 
             <it.sephiroth.android.library.widget.HListView
                 android:id="@+id/calendar_list"
@@ -23,7 +23,6 @@
 
                 android:layout_height="60dp"
                 android:drawSelectorOnTop="false"
-                android:background="@color/primary"
                 tools:context=".MainActivity"/>
 
             <ru.rgups.time.views.CalendarHint
@@ -37,6 +36,12 @@
                 android:background="@color/primary_dark"
                 android:textSize="20sp"
                 android:padding="10dp"/>
+
+            <View
+                android:layout_alignParentBottom="true"
+                android:background="@drawable/shadow_horizonral_2"
+                android:layout_width="match_parent"
+                android:layout_height="5dp" />
 
         </RelativeLayout>
 
